--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pizza_bot?useUnicode=true&useJ
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
 
 
 spring.freemarker.expose-request-attributes=true
